Fixed alignment bug

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -30,6 +30,7 @@ body {
 @media only screen and (max-width: 767px) {
   #thread-grid {
     .comment > .content {
+      min-width: 200px !important;
       width: 40%;
     }
 
